rate-limiting-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratelimiting-svc
spec:
  selector:
    app: ratelimiting
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 80
  type: ClusterIP
