rate-limiting-istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ratelimiting
spec:
  selector:
    istio: ingressgateway    
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "testing.com"
