rate-limiting-istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratelimiting-svc
spec:
  host:  ratelimiting-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
        tcpKeepalive:
          time: 7200s
          interval: 5s
      http:
        http2MaxRequests: 1
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 2m
  subsets:
  - name: v1
    labels:
      version: v1 
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
