rate-limiting-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratelimiting-service
spec:
  hosts:
    - "testing.com"   
  gateways:
    - "ratelimiting"
    - mesh
  http:
  - match:
      - headers:
          user:
            exact: v1
    route:
    - destination:
        host: ratelimiting-svc
        subset: v1
  - match:
      - headers:
          user:
            exact: v2
    route:
    - destination:
        host: ratelimiting-svc
        subset: v2
  - route:
    - destination:
        host: ratelimiting-svc 
        subset: v3
